--- a/repo M1/Proyecto1/index.html
+++ b/repo M1/Proyecto1/index.html
@@ -12,7 +12,7 @@
 
   <header class="text-center my-4">
     <div class="titulo">
-      <img src="img/perfil.jpg.jpeg" alt="perfil">
+      <img src="img/perfil.jpg" alt="perfil">
       <h1>JUAN JOSÉ OVIEDO</h1>
     </div>
     <p class="text-muted">Técnico de Fibra Óptica</p>
