--- a/repo M1/Proyecto1/index.html
+++ b/repo M1/Proyecto1/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Página Personal - Juan José Oviedo</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Perfil - Juan José Oviedo</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <header class="text-center my-4">
-    <div class="titulo">
-      <img src="img/perfil.jpg" alt="perfil">
-      <h1>JUAN JOSÉ OVIEDO</h1>
-    </div>
-    <p class="text-muted">Técnico de Fibra Óptica</p>
-  </header>
+  <div class="container">
+    <img src="img/perfil.jpg.jpeg" alt="perfil">
 
-  <main class="container">
+    <h1>JUAN JOSÉ OVIEDO</h1>
+    <h2>Técnico de Fibra Óptica</h2>
+
     <section>
-      <h2>Experiencia Laboral</h2>
+      <h3>Experiencia Laboral</h3>
       <p>
         Cuento con experiencia en instalaciones domiciliarias de FTTH, asegurando un servicio eficiente y de calidad al cliente final.
         Me desempeño también en trabajos de red externa, realizando fusiones de hilos de fibra óptica y tendidos de fibra troncal
@@ -29,56 +25,34 @@
     </section>
 
     <section>
-      <h2>Obras y Proyectos</h2>
+      <h3>Obras y Proyectos</h3>
       <ul>
-        <li><b>Extensión de red en zona norte:</b> 8 km de fibra óptica con 36 cajas NAP.</li>
-        <li><b>Zona oeste:</b> 3 km de fibra óptica y 13 cajas NAP.</li>
-        <li><b>Conexión rural:</b> 3 km de fibra óptica, garantizando conectividad en zonas alejadas.</li>
-        <li><b>Proyecto "Telco Red":</b> instalación de piezos tecnológicos para instituciones públicas.</li>
+        <li><strong>Extensión de red en zona norte:</strong> 8 km de fibra óptica con 36 cajas NAP.</li>
+        <li><strong>Zona oeste:</strong> 3 km de fibra óptica y 13 cajas NAP.</li>
+        <li><strong>Conexión rural:</strong> 3 km de fibra óptica, garantizando conectividad en zonas alejadas.</li>
+        <li><strong>Proyecto "Telco Red":</strong> instalación de piezas tecnológicas para instituciones públicas.</li>
       </ul>
     </section>
 
     <section>
-      <h2>Datos Personales</h2>
-      <ul>
-        <li><b>Ciudad:</b> Goya, Corrientes</li>
-        <li><b>Teléfono:</b> <a href="https://wa.me/5493777590775" target="_blank">3777-590775</a></li>
-        <li><b>Dirección:</b> Rolón 3003</li>
-        <li><b>GitHub:</b> <a href="https://github.com/chp999" target="_blank">chp999</a></li>
-      </ul>
+      <h3>Datos Personales</h3>
+      <p><strong>Ciudad:</strong> Goya, Corrientes</p>
+      <p><strong>Teléfono:</strong> <a href="tel:+543777590775">3777-590775</a></p>
+      <p><strong>Dirección:</strong> Rolón 3003</p>
+      <p><strong>GitHub:</strong> <a href="https://github.com/chp999" target="_blank">chp999</a></p>
     </section>
 
-    <section>
-      <h2>Redes Sociales</h2>
-      <ul>
-        <li><a href="https://www.instagram.com/chapayin" target="_blank">Instagram</a></li>
-        <li><a href="https://www.facebook.com/share/1CC9VVmB4Q/" target="_blank">Facebook</a></li>
-        <li><a href="https://wa.me/5493777590775" target="_blank">WhatsApp</a></li>
-      </ul>
+    <section class="redes">
+      <h3>Redes Sociales</h3>
+      <a href="#" target="_blank">Instagram</a>
+      <a href="#" target="_blank">Facebook</a>
+      <a href="#" target="_blank">WhatsApp</a>
     </section>
 
-    <hr>
-  </main>
+    <footer>
+      <p>© 2025 Juan José Oviedo | Técnico de Fibra Óptica</p>
+    </footer>
+  </div>
 
-  <section id="mis-actividades" class="container my-5">
-    <h2>Mis Actividades Favoritas</h2>
-
-    <form id="form-actividad" class="mb-4">
-      <input id="title-input" class="form-control mb-2" type="text" placeholder="Título" />
-      <textarea id="description-input" class="form-control mb-2" rows="3" placeholder="Descripción"></textarea>
-      <input id="imgUrl-input" class="form-control mb-2" type="text" placeholder="URL de la imagen (ej. img/fibra.jpg)" />
-      <button id="btn-add-actividad" type="submit" class="btn btn-success w-100">Agregar Actividad</button>
-      <span id="form-message" class="text-danger mt-2 d-block"></span>
-    </form>
-
-    <div id="activities-container" class="row g-3"></div>
-  </section>
-
-  <footer class="text-center py-3 text-muted">
-    © 2025 Juan José Oviedo - Todos los derechos reservados
-  </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="scripts/index.js"></script>
 </body>
 </html>
