--- a/repo M1/Proyecto1/index.html
+++ b/repo M1/Proyecto1/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Perfil - Juan José Oviedo</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/style.css" />
 </head>
+
 <body>
+  <!-- Encabezado -->
+  <header class="text-center my-4 text-light">
+    <div class="titulo">
+      <img src="img/perfil.jpg" alt="foto de perfil" class="perfil-img">
+      <h1 class="fw-bold mt-3">JUAN JOSÉ OVIEDO</h1>
+      <h5 class="text-info">Técnico de Fibra Óptica</h5>
+    </div>
+  </header>
 
-  <div class="container">
-    <img src="img/perfil.jpg.jpeg" alt="perfil">
-
-    <h1>JUAN JOSÉ OVIEDO</h1>
-    <h2>Técnico de Fibra Óptica</h2>
-
-    <section>
-      <h3>Experiencia Laboral</h3>
+  <!-- Contenido principal -->
+  <main class="container text-light">
+    <section class="mb-5">
+      <h2 class="text-info">Experiencia Laboral</h2>
       <p>
         Cuento con experiencia en instalaciones domiciliarias de FTTH, asegurando un servicio eficiente y de calidad al cliente final.
         Me desempeño también en trabajos de red externa, realizando fusiones de hilos de fibra óptica y tendidos de fibra troncal
@@ -24,8 +30,8 @@
       </p>
     </section>
 
-    <section>
-      <h3>Obras y Proyectos</h3>
+    <section class="mb-5">
+      <h2 class="text-info">Obras y Proyectos</h2>
       <ul>
         <li><strong>Extensión de red en zona norte:</strong> 8 km de fibra óptica con 36 cajas NAP.</li>
         <li><strong>Zona oeste:</strong> 3 km de fibra óptica y 13 cajas NAP.</li>
@@ -34,25 +40,41 @@
       </ul>
     </section>
 
-    <section>
-      <h3>Datos Personales</h3>
+    <section class="mb-5">
+      <h2 class="text-info">Datos Personales</h2>
       <p><strong>Ciudad:</strong> Goya, Corrientes</p>
-      <p><strong>Teléfono:</strong> <a href="tel:+543777590775">3777-590775</a></p>
+      <p><strong>Teléfono:</strong> <a href="tel:+543777590775" class="link-info">3777-590775</a></p>
       <p><strong>Dirección:</strong> Rolón 3003</p>
-      <p><strong>GitHub:</strong> <a href="https://github.com/chp999" target="_blank">chp999</a></p>
+      <p><strong>GitHub:</strong> <a href="https://github.com/chp999" class="link-info" target="_blank">chp999</a></p>
     </section>
 
-    <section class="redes">
-      <h3>Redes Sociales</h3>
-      <a href="#" target="_blank">Instagram</a>
-      <a href="#" target="_blank">Facebook</a>
-      <a href="#" target="_blank">WhatsApp</a>
+    <section class="mb-5">
+      <h2 class="text-info">Redes Sociales</h2>
+      <a href="#" class="link-light me-3">Instagram</a>
+      <a href="#" class="link-light me-3">Facebook</a>
+      <a href="#" class="link-light">WhatsApp</a>
     </section>
 
-    <footer>
-      <p>© 2025 Juan José Oviedo | Técnico de Fibra Óptica</p>
-    </footer>
-  </div>
+    <!-- Actividades favoritas -->
+    <section class="bg-dark p-4 rounded shadow">
+      <h2 class="text-center text-info mb-4">Mis Actividades Favoritas</h2>
 
+      <div class="mb-3">
+        <input type="text" id="titulo" class="form-control mb-2" placeholder="Título">
+        <textarea id="descripcion" class="form-control mb-2" rows="2" placeholder="Descripción"></textarea>
+        <input type="text" id="imagen" class="form-control mb-3" placeholder="URL de la imagen (ej: img/fibra.jpg)">
+        <button id="agregar" class="btn btn-info w-100 fw-bold">Agregar Actividad</button>
+      </div>
+
+      <div id="actividades" class="row mt-4 gy-3"></div>
+    </section>
+  </main>
+
+  <footer class="text-center text-muted mt-5 mb-3">
+    © 2025 Juan José Oviedo | Técnico de Fibra Óptica
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="scripts/index.js"></script>
 </body>
 </html>
